feat: adding background jobs ui page and apis - requires user is_admin to be set to true
